# Study-of-Qt-C-

./: .gitignore  README.md
QTest_tutorial/build-practice_writeQTests-Desktop-Debug/: CMakeCache.txt  CMakeCache.txt.prev  Makefile  cmake_install.cmake  practice_writeQTests  qtcsettings.cmake
QTest_tutorial/build-practice_writeQTests-Desktop-Debug/.qtc_clangd/: compile_commands.json
QTest_tutorial/build-practice_writeQTests-Desktop-Debug/practice_writeQTests_autogen/: moc_predefs.h  mocs_compilation.cpp
QTest_tutorial/practice_writeQTests/: CMakeLists.txt  main.cpp  qteststudy.cpp  qteststudy.h
Qtutorial/StringinQt/: basicExsample.cpp
Qtutorial/StringinQt/basicExample/: CMakeLists.txt
Qtutorial/containers/build-practiceWithContainers-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  practiceWithContainers
Qtutorial/containers/practiceWithContainers/: CMakeLists.txt  main.cpp
Qtutorial/date_and_time/practiceWithClasses/: main.cpp  (+1 more)
Qtutorial/fileanddirectories/: caller.py  fileTest
Qtutorial/fileanddirectories/practiceWithfilesystem/: CMakeLists.txt  check_memorySizeByte.cpp  fileworker.cpp  fileworker.h  main.cpp
Qtutorial/stringinQt/: basicExample.cpp  test.cpp
lecturiesCpp/lesson1/: Makefile  main.cpp  my_prog  negative.cpp  negative.h  negative.h.gch
lecturiesCpp/lesson2/: Makefile  Timer.cpp  cachegrind.out.17587  column.cpp  lesson2namespace.h  lesson2namespace.h.gch  line.cpp  main.cpp  my_prog
lecturiesCpp/lesson3/: .#main.cpp  Makefile  main.cpp  test  test.py
lecturiesCpp/lesson3/qtprog/: CMakeLists.txt  check_intvalue_prime.cpp  lesson3namespace.h  main.cpp  main.cpp.autosave
lecturiesCpp/lesson5/progforMatrixClass/: CMakeLists.txt  main.cpp  matrix.cpp  matrix.h
workwith_widgets/: key_signal.txt
workwith_widgets/build-userEmulator-Desktop-Debug/: CMakeCache.txt.prev  Makefile  cmake_install.cmake  userEmulator
workwith_widgets/userEmulator/: CMakeLists.txt  errorwidget.cpp  errorwidget.h  errorwidget.ui  graphwidget.cpp  graphwidget.h  graphwidget.ui  loginWindow.ui  logindialog.ui  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.ui
(+96 files in other folders)
